minor bugfix list of included refactorings